...
            )
        )
        Spacer(modifier = Modifier.height((screenHeight * 0.02f).dp))
        TextField(
            value = password,
            onValueChange = { password = it.replace("\n", "") },
            label = { Text("Password") },
            singleLine = true,
            modifier = Modifier.fillMaxWidth().focusRequester(focusRequester),
            visualTransformation = PasswordVisualTransformation(),
            shape = textFieldShape,
            colors = TextFieldDefaults.colors(
                focusedIndicatorColor = Color.Transparent,
...
                    ),
                contentAlignment = Alignment.Center
            ) {
                if (isLoading) {
                    CircularProgressIndicator()
                } else {
                    Text(text = "LOGIN", style = Typography.headlineSmall)
                }
            }
        }
        errorMessage?.let {
            Spacer(modifier = Modifier.height((screenHeight * 0.005f).dp))
            Text(text = it, color = Color(0xFFDBAD8C))
...
