...
                            navigationIcon = {
                                IconButton(onClick = {
                                    coroutineScope.launch {
                                        drawerState.open()
                                    }
                                }) {
                                    Icon(Icons.Filled.Menu, contentDescription = "Menu Button")
                                }
                            },
                            title = {
                                Text(
                                    monthName.uppercase(),
                                    style = Typography.headlineSmall,
...
